fix: add getDaylyPlansOld
